# corim-tool

./: Cargo.toml  README.md
src/: compile.rs  main.rs  parse.rs  result.rs  util.rs  verify.rs
test/: good-corim.json  meta.json  signed-good-corim.cbor  unsigned-good-corim.cbor
test/certs/: generate-certs.sh  int.cert.der  int.cert.pem  int.cert.srl  int.csr.pem  int.key.pem  key.priv.jwk  key.pub.jwk  leaf.cert.der  leaf.cert.pem  leaf.csr.pem  root.cert.der  root.cert.pem  root.cert.srl  root.key.pem  v3ext.int.cnf  v3ext.leaf.cnf
