[package]
name = "corim-tool"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/veraison/corim-tool"
license = "Apache-2.0"
description = "CLI for working with Concise Reference Integrity Manifests (CoRIMs)"
readme = "README.md"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
env_logger = { version = "0.11.8", features = ["kv"] }
log = { version = "0.4.27", features = ["kv"] }
corim-rs = { version = "0.2.0", features = ["openssl"] }
ciborium = "0.2.2"
serde_json = "1.0.142"
x509-parser = { version = "0.18.1", features = ["verify", "validate"] }
rustls-native-certs = "0.8.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
